# c-utils

./: .gitignore  CMakeLists.txt  main.c
functions/: functions.c
script/: version.sh
src/: CMakeLists.txt  main.c
src/arrays/: CMakeLists.txt  arrays.c  arrays.h
src/basic/: CMakeLists.txt  basic.c  basic.h
src/functions/: functions.c
src/headers/: basic.h  functions.h  struct.h
src/include/: basic.h  struct.h
src/malloc/: CMakeLists.txt  malloc.h
src/modules/: arrays.c  basic.c  basic.h  malloc.c  pointers.c  pointers.h  struct.c  structs.c  utils.c
src/pointers/: CMakeLists.txt  pointers.c  pointers.h
src/structs/: CMakeLists.txt  structs.c  structs.h
test/: CMakeLists.txt  test_runner.c
test/functions/: test_functions.c  test_functions.h
test/headers/: test_utils.h
test/modules/: test_arrays.c  test_basic.c  test_basic.h  test_malloc.c  test_pointers.c  test_struct.c  test_struct.h  test_structs.c  test_utils.c  test_utils.h  utils.c  utils.h
